[gd_scene load_steps=55 format=3 uid="uid://c8goshj4p7p2m"]

[ext_resource type="Script" path="res://characters/character_object.gd" id="1_7v1m0"]
[ext_resource type="Script" path="res://scripts/fsm/state_machine.gd" id="2_ii632"]
[ext_resource type="Script" path="res://characters/components/push_box.gd" id="2_uuuuo"]
[ext_resource type="Script" path="res://scripts/hurt_box.gd" id="3_koo64"]
[ext_resource type="Script" path="res://scripts/hit_box.gd" id="4_cji4j"]
[ext_resource type="Script" path="res://characters/states/idle.gd" id="4_fgmgc"]
[ext_resource type="Script" path="res://characters/components/health.gd" id="4_lmlhl"]
[ext_resource type="Script" path="res://characters/states/walk.gd" id="4_nv6cl"]
[ext_resource type="Script" path="res://characters/states/dash.gd" id="5_3uxhp"]
[ext_resource type="Script" path="res://characters/states/jump.gd" id="5_4nvng"]
[ext_resource type="Script" path="res://characters/states/landing.gd" id="6_mghvc"]
[ext_resource type="Texture2D" uid="uid://beth6mnrfs4ge" path="res://assets/characters/test/sprites/nek00_000.png" id="8_ddia5"]
[ext_resource type="Texture2D" uid="uid://d0wu0b2dj62ks" path="res://assets/characters/test/sprites/nek00_001.png" id="9_mwr8m"]
[ext_resource type="Texture2D" uid="uid://bm3yin7xx6tgt" path="res://assets/characters/test/sprites/nek00_002.png" id="10_thcum"]
[ext_resource type="Texture2D" uid="uid://dc8vt3iudalt6" path="res://assets/characters/test/sprites/nek00_003.png" id="11_e6l20"]
[ext_resource type="Texture2D" uid="uid://4hi2prxapq3q" path="res://assets/characters/test/sprites/nek00_004.png" id="12_i4ej6"]
[ext_resource type="Texture2D" uid="uid://dqvxme3joyke1" path="res://assets/characters/test/sprites/nek15_000.png" id="16_1li6u"]
[ext_resource type="Texture2D" uid="uid://b8ifv2bwboeay" path="res://assets/characters/test/sprites/nek15_001.png" id="17_rcx46"]
[ext_resource type="Texture2D" uid="uid://bxalwp2yydx0w" path="res://assets/characters/test/sprites/nek15_002.png" id="18_oklpf"]
[ext_resource type="Texture2D" uid="uid://de7uomw5pvq24" path="res://assets/characters/test/sprites/nek15_003.png" id="19_vur06"]
[ext_resource type="Texture2D" uid="uid://bpmqjkkkgbfyn" path="res://assets/characters/test/sprites/nek15_004.png" id="20_llkv0"]
[ext_resource type="Texture2D" uid="uid://b5erh4qjeox5o" path="res://assets/characters/test/sprites/nek15_005.png" id="21_ha0kq"]
[ext_resource type="Texture2D" uid="uid://c1ykg4e8bui1r" path="res://assets/characters/test/sprites/nek15_006.png" id="22_1cfye"]
[ext_resource type="Texture2D" uid="uid://cltwg4gbwdgno" path="res://assets/characters/test/sprites/nek15_007.png" id="23_ixhp2"]
[ext_resource type="Texture2D" uid="uid://nx6pnyoy23j3" path="res://assets/characters/test/sprites/nek15_008.png" id="24_whqu5"]
[ext_resource type="Texture2D" uid="uid://w7aiilmqy50r" path="res://assets/characters/test/sprites/nek15_009.png" id="25_uk6kb"]
[ext_resource type="Texture2D" uid="uid://bqlwjvaoea3du" path="res://assets/characters/test/sprites/nek15_010.png" id="26_8sh4g"]
[ext_resource type="Texture2D" uid="uid://dfih5msve8fyt" path="res://assets/characters/test/sprites/nek15_011.png" id="27_nt0fj"]
[ext_resource type="Texture2D" uid="uid://6q2cs3bjf0d2" path="res://assets/characters/test/sprites/nek15_012.png" id="28_m235d"]
[ext_resource type="Texture2D" uid="uid://dux7fc1doa73e" path="res://assets/characters/test/sprites/nek13_000.png" id="29_io6ud"]
[ext_resource type="Texture2D" uid="uid://bb0jf8yss35l" path="res://assets/characters/test/sprites/nek13_001.png" id="30_p07ve"]
[ext_resource type="Texture2D" uid="uid://cwdwo7ofvfug1" path="res://assets/characters/test/sprites/nek13_002.png" id="31_gapwo"]
[ext_resource type="Texture2D" uid="uid://olcm01ad5o7m" path="res://assets/characters/test/sprites/nek13_003.png" id="32_qtufn"]
[ext_resource type="Texture2D" uid="uid://dric8xnipqkmi" path="res://assets/characters/test/sprites/nek13_004.png" id="33_iojcp"]
[ext_resource type="Texture2D" uid="uid://be1ynnsdlbb6i" path="res://assets/characters/test/sprites/nek13_005.png" id="34_x62ia"]
[ext_resource type="Texture2D" uid="uid://pvaig48wrc22" path="res://assets/characters/test/sprites/nek13_006.png" id="35_ob4e0"]
[ext_resource type="Texture2D" uid="uid://bnduwswtfmbry" path="res://assets/characters/test/sprites/nek13_007.png" id="36_esvjx"]
[ext_resource type="Texture2D" uid="uid://cucmqoo0l3nrw" path="res://assets/characters/test/sprites/nek26_000.png" id="37_2eg7q"]
[ext_resource type="Texture2D" uid="uid://c0qymvfyowixo" path="res://assets/characters/test/sprites/nek26_001.png" id="38_cvvr1"]
[ext_resource type="Texture2D" uid="uid://x3v5r8sdutwm" path="res://assets/characters/test/sprites/nek26_002.png" id="39_xgqrx"]
[ext_resource type="Texture2D" uid="uid://djfnttqbi1mjv" path="res://assets/characters/test/sprites/nek26_003.png" id="40_jh726"]
[ext_resource type="Texture2D" uid="uid://cxuv5wso0o4a1" path="res://assets/characters/test/sprites/nek26_004.png" id="41_qrx4l"]
[ext_resource type="Texture2D" uid="uid://hrjbk62s10ls" path="res://assets/characters/test/sprites/nek26_005.png" id="42_w7a3h"]
[ext_resource type="Texture2D" uid="uid://bv8b8tfh32q7y" path="res://assets/characters/test/sprites/nek26_006.png" id="43_q8sea"]
[ext_resource type="Texture2D" uid="uid://bc4gpcqqiuby4" path="res://assets/characters/test/sprites/nek26_007.png" id="44_51mki"]

[sub_resource type="SpriteFrames" id="SpriteFrames_g607v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_ddia5")
}, {
"duration": 1.0,
"texture": ExtResource("9_mwr8m")
}, {
"duration": 1.0,
"texture": ExtResource("10_thcum")
}, {
"duration": 1.0,
"texture": ExtResource("11_e6l20")
}, {
"duration": 1.0,
"texture": ExtResource("12_i4ej6")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_1li6u")
}, {
"duration": 1.0,
"texture": ExtResource("17_rcx46")
}, {
"duration": 1.0,
"texture": ExtResource("18_oklpf")
}, {
"duration": 1.0,
"texture": ExtResource("19_vur06")
}, {
"duration": 1.0,
"texture": ExtResource("20_llkv0")
}, {
"duration": 1.0,
"texture": ExtResource("21_ha0kq")
}, {
"duration": 1.0,
"texture": ExtResource("22_1cfye")
}, {
"duration": 1.0,
"texture": ExtResource("23_ixhp2")
}, {
"duration": 1.0,
"texture": ExtResource("24_whqu5")
}, {
"duration": 1.0,
"texture": ExtResource("25_uk6kb")
}, {
"duration": 1.0,
"texture": ExtResource("26_8sh4g")
}, {
"duration": 1.0,
"texture": ExtResource("27_nt0fj")
}, {
"duration": 1.0,
"texture": ExtResource("28_m235d")
}],
"loop": true,
"name": &"jump",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("29_io6ud")
}, {
"duration": 1.0,
"texture": ExtResource("30_p07ve")
}, {
"duration": 1.0,
"texture": ExtResource("31_gapwo")
}, {
"duration": 1.0,
"texture": ExtResource("32_qtufn")
}, {
"duration": 1.0,
"texture": ExtResource("33_iojcp")
}, {
"duration": 1.0,
"texture": ExtResource("34_x62ia")
}, {
"duration": 1.0,
"texture": ExtResource("35_ob4e0")
}, {
"duration": 1.0,
"texture": ExtResource("36_esvjx")
}],
"loop": true,
"name": &"run",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("37_2eg7q")
}, {
"duration": 1.0,
"texture": ExtResource("38_cvvr1")
}, {
"duration": 1.0,
"texture": ExtResource("39_xgqrx")
}, {
"duration": 1.0,
"texture": ExtResource("40_jh726")
}, {
"duration": 1.0,
"texture": ExtResource("41_qrx4l")
}, {
"duration": 1.0,
"texture": ExtResource("42_w7a3h")
}, {
"duration": 1.0,
"texture": ExtResource("43_q8sea")
}, {
"duration": 1.0,
"texture": ExtResource("44_51mki")
}],
"loop": true,
"name": &"walk",
"speed": 11.0
}]

[sub_resource type="Animation" id="Animation_0l6hi"]
resource_name = "Air"
length = 0.20001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteContainer/Main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteContainer/Main:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtBox:data")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Array[Rect2]([Rect2(-64, -94, 128, 230)])]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PushBox:shape")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(-48, -14, 96, 96)]
}

[sub_resource type="Animation" id="Animation_4j15p"]
resource_name = "Idle"
length = 0.500002
loop_mode = 1
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteContainer/Main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HurtBox:data")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Array[Rect2]([Rect2(-64, -94, 128, 240)])]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PushBox:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(-48, -14, 96, 160)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpriteContainer/Main:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}

[sub_resource type="Animation" id="Animation_e800o"]
resource_name = "Jump"
length = 0.30001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteContainer/Main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteContainer/Main:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtBox:data")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Array[Rect2]([Rect2(-64, -94, 128, 240)])]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PushBox:shape")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(-48, -14, 96, 96)]
}

[sub_resource type="Animation" id="Animation_wuvau"]
resource_name = "Landing"
length = 0.50001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteContainer/Main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteContainer/Main:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtBox:data")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Array[Rect2]([Rect2(-64, -94, 128, 240)])]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PushBox:shape")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(-48, -14, 96, 160)]
}

[sub_resource type="Animation" id="Animation_r152r"]
resource_name = "Prejump"
length = 0.20001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteContainer/Main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteContainer/Main:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtBox:data")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Array[Rect2]([Rect2(-64, -94, 128, 240)]), Array[Rect2]([Rect2(-64, -53, 128, 200)]), Array[Rect2]([Rect2(-64, -94, 128, 240)])]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PushBox:shape")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(-48, -14, 96, 160)]
}

[sub_resource type="Animation" id="Animation_hlddy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteContainer/Main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HurtBox:data")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Array[Rect2]([Rect2(-64, -94, 128, 240)])]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PushBox:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(-32, -14, 64, 160)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpriteContainer/Main:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}

[sub_resource type="Animation" id="Animation_w6llw"]
resource_name = "Walk"
length = 0.80001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteContainer/Main:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteContainer/Main:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtBox:data")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Array[Rect2]([Rect2(-64, -94, 128, 240)])]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PushBox:shape")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(-48, -14, 96, 160)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t1sxr"]
_data = {
"Air": SubResource("Animation_0l6hi"),
"Idle": SubResource("Animation_4j15p"),
"Jump": SubResource("Animation_e800o"),
"Landing": SubResource("Animation_wuvau"),
"Prejump": SubResource("Animation_r152r"),
"RESET": SubResource("Animation_hlddy"),
"Walk": SubResource("Animation_w6llw")
}

[node name="CharacterObject" type="Node2D" node_paths=PackedStringArray("state_machine", "health", "push_box", "hurt_box", "hit_box", "sprite_container", "animation_player")]
script = ExtResource("1_7v1m0")
state_machine = NodePath("StateMachine")
health = NodePath("Health")
push_box = NodePath("PushBox")
hurt_box = NodePath("HurtBox")
hit_box = NodePath("HitBox")
sprite_container = NodePath("SpriteContainer")
animation_player = NodePath("AnimationPlayer")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("host")]
script = ExtResource("2_ii632")
host = NodePath("..")
default_state = "Idle"

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_fgmgc")

[node name="Walking" type="Node" parent="StateMachine"]
script = ExtResource("4_nv6cl")

[node name="FDash" type="Node" parent="StateMachine"]
script = ExtResource("5_3uxhp")

[node name="BDash" type="Node" parent="StateMachine"]
script = ExtResource("5_3uxhp")

[node name="Jumping" type="Node" parent="StateMachine"]
script = ExtResource("5_4nvng")

[node name="Prejump" type="Node" parent="StateMachine"]
script = ExtResource("5_4nvng")

[node name="Landing" type="Node" parent="StateMachine"]
script = ExtResource("6_mghvc")

[node name="Health" type="Node" parent="."]
script = ExtResource("4_lmlhl")

[node name="PushBox" type="Node2D" parent="."]
z_index = 99
z_as_relative = false
script = ExtResource("2_uuuuo")
shape = Rect2(-32, -14, 64, 160)

[node name="HurtBox" type="Node2D" parent="."]
z_index = 99
z_as_relative = false
script = ExtResource("3_koo64")
active = false
data = Array[Rect2]([Rect2(-64, -94, 128, 240)])

[node name="HitBox" type="Node2D" parent="."]
z_index = 99
z_as_relative = false
script = ExtResource("4_cji4j")
active = false

[node name="SpriteContainer" type="Marker2D" parent="."]

[node name="Main" type="AnimatedSprite2D" parent="SpriteContainer"]
texture_filter = 1
position = Vector2(-24, -418)
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_g607v")
animation = &"idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t1sxr")
}
